--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiogram==2.25.2
 aiohttp==3.8.6
 aiosignal==1.3.1
+anyio==4.4.0
 async-timeout==4.0.3
 attrs==23.2.0
 Babel==2.9.1
@@ -8,6 +9,9 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 frozenlist==1.4.1
 fuzzywuzzy==0.18.0
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
 idna==3.7
 Levenshtein==0.25.1
 magic-filter==1.0.12
@@ -16,6 +20,7 @@ python-Levenshtein==0.25.1
 pytz==2024.1
 rapidfuzz==3.9.3
 requests==2.32.3
+sniffio==1.3.1
 telegraph==2.2.0
 urllib3==2.2.2
 yarl==1.9.4
